Text glow reduces readability Fixes #28

--- a/penalties/index.css
+++ b/penalties/index.css
@@ -40,7 +40,7 @@
 #game-clock,
 #penalties-title h1,
 #period-info {
-  text-shadow: 1px 1px 2px rgb(0 0 0 / 40%), 0 0 4px rgb(0 0 0 / 50%);
+  text-shadow: 1px 1px 2px rgb(0 0 0 / 40%);
 }
 
 /* Shared logo drop shadow */
